# fastapi-learning

01practice/: README.md  pyproject.toml
02practicewithalembic/: README.md  alembic.ini  backup.sql  database.db
03practicewithpsql/: .pylintrc  Makefile  README.md  pyproject.toml
03practicewithpsql/migrations/: env.py
03practicewithpsql/migrations/versions/: 8c2e45dd519d_auto.py
03practicewithpsql/practice/: main.py
03practicewithpsql/practice/mvc/models/: userModel.py
05practicerauth/: pyproject.toml
05practicerauth/migrations/: env.py
05practicerauth/migrations/versions/: 59c6f75357b1_auto.py  e0470d525f5b_timestamp.py
05practicerauth/practice/: config.py
05practicerauth/practice/lib/: response.py
05practicerauth/practice/mvc/core/: security.py
05practicerauth/practice/mvc/models/: __init__.py  userModel.py
05practicerauth/practice/mvc/router/: productRoute.py  userRoute.py
06practicerauthpermission/: Makefile  pyproject.toml
06practicerauthpermission/migrations/: env.py
06practicerauthpermission/migrations/versions/: 667356653e1c_auto.py  edf59f35f082_auto.py
06practicerauthpermission/practice/: main.py
06practicerauthpermission/practice/lib/: __init__.py  db.py  dependencies.py  operation.py  response.py
06practicerauthpermission/practice/mvc/core/: security.py
06practicerauthpermission/practice/mvc/models/: __init__.py  base.py  productModel.py  roleModel.py  userModel.py
06practicerauthpermission/practice/mvc/router/: productRoute.py  roleRoute.py  userRoute.py
06practicerauthpermission/practice/mvc/router/userRoute/: authRoute.py  userRoute.py
practice/: README.md  (+2 more)
(+26 files in other folders)
