[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.3",
    "fastapi>=0.116.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]


api = "uvicorn practice.main:app --reload"
head = "alembic upgrade head"
generate = "alembic revision --autogenerate -m 'auto'"
